tests/ui/entry-point/imported_main_const_fn_item_type_forbidden.stderr
error[E0601]: `main` function not found in crate `imported_main_const_fn_item_type_forbidden`
  --> $DIR/imported_main_const_fn_item_type_forbidden.rs:14:22
   |
LL | use foo::BAR as main;
   |     ---------------- ^ consider adding a `main` function to `$DIR/imported_main_const_fn_item_type_forbidden.rs`
   |     |
   |     non-function item at `crate::main` is found

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.
